--- a/package.json
+++ b/package.json
@@ -12,25 +12,28 @@
     "compile:scss": "sgmf-scripts --compile css"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "stylelint": "^14.12.1",
-    "stylelint-config-standard": "^28.0.0",
-    "stylelint-scss": "^4.3.0",
     "istanbul": "^0.4.4",
     "mocha": "^5.2.0",
-    "sinon": "^1.17.4",
-    "chai": "^3.5.0",
-    "proxyquire": "1.7.4",
-    "sgmf-scripts": "^2.0.0",
-    "css-loader": "^6.7.1",
     "node-sass": "^7.0.3",
     "postcss-loader": "^7.0.1",
-    "sass-loader": "^7.0.3"
+    "proxyquire": "1.7.4",
+    "sass-loader": "^7.0.3",
+    "sgmf-scripts": "^2.0.0",
+    "sinon": "^1.17.4",
+    "stylelint": "^14.12.1",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-scss": "^4.3.0"
   },
   "browserslist": [
     "last 2 versions",
     "ie >= 10"
-  ]
+  ],
+  "dependencies": {
+    "autoprefixer": "^10.4.12"
+  }
 }
