--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
   ],
   "dependencies": {
     "autoprefixer": "^10.4.12"
+  },
+  "paths": {
+    "base": "../storefront-reference-architecture/cartridges/app_storefront_base/"
   }
 }
