refactor to accomodate SG cartridge

--- a/cartridges/int_shipped_sfra/.project
+++ b/cartridges/int_shipped_sfra/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>shippedCartridge</name>
+	<name>int_shipped_sfra</name>
 	<comment></comment>
 	<projects>
 	</projects>
