--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shippedCartridge",
+  "name": "int_shipped_sfra",
   "version": "0.0.1",
   "description": "New overlay cartridge",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "lint": "sgmf-scripts --lint js && sgmf-scripts --lint css",
     "lint:fix": "sgmf-scripts --lint js --fix && sgmf-scripts --lint css --fix",
     "upload": "sgmf-scripts --upload -- ",
-    "uploadCartridge": "sgmf-scripts --uploadCartridge shippedCartridge",
+    "uploadCartridge": "sgmf-scripts --uploadCartridge int_shipped && sgmf-scripts --uploadCartridge int_shipped_sfra",
     "compile:js": "sgmf-scripts --compile js",
     "compile:scss": "sgmf-scripts --compile css"
   },
